--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module", 
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile":"tsc"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
+    "axios": "^1.6.3",
     "express": "^4.18.2"
   }
 }
