--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
    },
    "dependencies": {
       "@types/express": "^4.17.21",
+      "cors": "^2.8.5",
       "express": "^4.18.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
