--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
       "@types/express": "^4.17.21",
       "cors": "^2.8.5",
       "express": "^4.18.2",
+      "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
