--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
    "license": "ISC",
    "devDependencies": {
       "-": "^0.0.1",
+      "@types/bcrypt": "^5.0.2",
+      "@types/jsonwebtoken": "^9.0.5",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.2",
       "ts-node": "10.7.0",
@@ -19,8 +21,10 @@
    },
    "dependencies": {
       "@types/express": "^4.17.21",
+      "bcrypt": "^5.1.1",
       "cors": "^2.8.5",
       "express": "^4.18.2",
+      "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
