--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
       "-": "^0.0.1",
       "@types/bcrypt": "^5.0.2",
       "@types/jsonwebtoken": "^9.0.5",
+      "@types/moment": "^2.13.0",
       "@types/node": "^16.11.10",
       "nodemon": "^3.0.2",
       "ts-node": "10.7.0",
@@ -25,6 +26,7 @@
       "cors": "^2.8.5",
       "express": "^4.18.2",
       "jsonwebtoken": "^9.0.2",
+      "moment": "^2.30.1",
       "multer": "^1.4.5-lts.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
