--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "axios": "^1.6.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "moment": "^2.30.1"
   }
 }
