--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.29",
     "html-webpack-plugin": "^5.6.0",
     "nodemon": "^3.0.2",
     "ts-loader": "^9.5.1",
@@ -20,10 +21,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.21",
-
     "axios": "^1.6.3",
     "express": "^4.18.2",
+    "jquery": "^3.7.1",
     "moment": "^2.30.1"
-
   }
 }
